# cryptopals

./: .clang-format  CMakeLists.txt  README.md  main.c
analysis/: CMakeLists.txt  english_score.c  english_score.h  hamming_distance.h  oracle_info.c  oracle_info.h  repeating_blocks.c  repeating_blocks.h
ciphers/: CMakeLists.txt  aes.c  aes.h  aes_cbc.c  aes_cbc.h  mt_stream.c  mt_stream.h  xor.c  xor.h
codecs/: CMakeLists.txt  base64.c  base64.h  decode_lines.h  hex.c  hex.h  xor.c  xor.h
oracles/: CMakeLists.txt  aes_oracles.c  aes_oracles.h  cbc_oracles.c  cbc_oracles.h  ctr_oracles.h  ecb_oracles.c  ecb_oracles.h  mersenne_twister_oracles.c  mersenne_twister_oracles.h
resources/: CMakeLists.txt  resources.h  s04_string_array.c  s04_string_array.h  s06_base64_string.c  s06_base64_string.h  s07_base64_string.c  s07_base64_string.h  s08_string_array.c  s08_string_array.h  s10_base64_string.c  s10_base64_string.h
solutions/: CMakeLists.txt  answers.c  run.c  run.h  s01.c  s02.c  s03.c  s04.c  s05.c  s06.c  s07.c  s08.c  s09.c  s10.c  s11.c  s12.c  s13.c  s14.c  s15.c  s16.c  s17.c  s18.c  s19.c  s20.c  s21.c  s22.c  s23.c  s24.c  s25.c  solutions.h
src/: CMakeLists.txt  log.h
src/analysis/: CMakeLists.txt  english_score.c  english_score.h  hamming_distance.c  oracle_info.h
src/ciphers/: CMakeLists.txt  xor.c
src/codecs/: CMakeLists.txt  base64.c  base64.h  decode_lines.c  hex.c
src/oracles/: CMakeLists.txt  cbc_oracles.h  ctr_oracles.c  mersenne_twister_oracles.h  user_data_oracle.c  user_data_oracle.h
src/resources/: CMakeLists.txt
src/solutions/: CMakeLists.txt  answers.h  run.h  s01.c  s02.c  s03.c  s04.c  s06.c  s09.c  s10.c  s11.c  s13.c  s17.c  s18.c  s20.c  s21.c  s22.c  s23.c  s24.c  s26.c  solutions.h
src/uncrypt/: CMakeLists.txt  break_ctr.c  break_ecb.c  break_ecb.h  break_xor.c  break_xor.h
src/utility/: CMakeLists.txt  files.c  mersenne_twister.c  random.h  string_utils.c
uncrypt/: CMakeLists.txt  break_cbc.c  break_cbc.h  break_ctr.c  break_ctr.h  break_ecb.c  break_ecb.h  break_mersenne_twister.c  break_mersenne_twister.h  break_xor.c  break_xor.h
utility/: CMakeLists.txt  files.c  files.h  mersenne_twister.c  mersenne_twister.h  oracles.c  oracles.h  pkcs7_pad.c  pkcs7_pad.h  random.c  repeat_buffer.c  repeat_buffer.h  string_utils.c  string_utils.h
